input save and return
small update with input text box, button and js returns value to the
same input

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+body {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	background-color: #5a95cf;
+}
+
+a{
+	color: white;
+}
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
